# mosqlimate-ai-competitor

./: .gitignore  README.md  config.yaml  mosqlimate.yaml  pyproject.toml
data/: .gitignore
docs/: agents.md  data_pipeline.md  models.md
examples/: generate_validation_report.py
src/mosqlimate_ai/: __init__.py  cli.py  config.py
src/mosqlimate_ai/agents/: __init__.py  base.py  communication.py  data_agent.py  ensemble_agent.py  forecast_agent.py  knowledge_base.py  model_agent.py  model_selector_agent.py  orchestrator.py  prompts.py  selection_agent.py  state_validation_agent.py  tuner_agent.py  validator_agent.py
src/mosqlimate_ai/data/: __init__.py  downloader.py  feature_cache.py  features.py  loader.py  preprocessor.py
src/mosqlimate_ai/evaluation/: __init__.py  metrics.py
src/mosqlimate_ai/models/: __init__.py  ensemble.py  lstm_model.py  nbeats_model.py  prophet_model.py  tft_model.py  xgboost_model.py
src/mosqlimate_ai/submission/: __init__.py  api_client.py  formatter.py
src/mosqlimate_ai/validation/: __init__.py  config.py  orchestrator.py
src/mosqlimate_ai/visualization/: __init__.py  report_plots.py  validation_plots.py  validation_report.py
tests/: test_metrics.py
